<resources>
    <string name="app_name">Employee Data Management Mobile Application</string>
    <string name="employee_login">Employee Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="employee_management_app">Employee Management App</string>
    <string name="login">Login</string>
    <string name="username_login">Username/Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="view_profile">View Profile</string>
    <string name="submit_a_leave_request">Submit a Leave Request</string>
    <string name="check_approval">Check Approval</string>
    <string name="leave_request">Leave Request</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason_for_leave">Reason for Leave</string>
    <string name="submit">Submit</string>
    <string name="confirmation_screen">Confirmation Screen</string>
    <string name="your_leave_request_has_been_approved">Your leave request has been Approved</string>
    <string name="calendar">Calendar</string>
    <string name="go_back">Go back</string>
    <string name="employee_profile">Employee Profile</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="job">Job</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
</resources>