<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#D04541"
        android:padding="7dp"
        android:text="@string/log_out"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#D9D9D9"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/employee_dashboard"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="254dp"
        android:layout_height="263dp"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/employee" />


    <Button
        android:id="@+id/viewProfileButton"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#1B3A4B"
        android:text="@string/view_profile"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/submitLeaveRequestButton"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#1B3A4B"
        android:text="@string/submit_a_leave_request"
        android:textColor="#FFFFFF"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/checkApprovalButton"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#1B3A4B"
        android:text="@string/check_approval"
        android:textColor="#FFFFFF" />

</LinearLayout>
