<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="#D04541"
            android:padding="7dp"
            android:text="Log Out"
            android:textColor="@android:color/white"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="2in"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="128dp"
            android:background="#E0E0E0"
            android:padding="14dp"
            android:text="@string/leave_request"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="InOrMmUsage" />

        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#455A64"
            android:text="@string/start_date"
            android:textColor="#FFFFFF"
            tools:ignore="InOrMmUsage" />

        <Button
            android:id="@+id/btn_end_date"
            android:layout_width="1.5in"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#455A64"
            android:text="@string/end_date"
            android:textColor="#FFFFFF"
            tools:ignore="InOrMmUsage" />

        <EditText
            android:id="@+id/et_reason_for_leave"
            android:layout_width="2in"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="#37474F"
            android:backgroundTint="#455A64"
            android:gravity="center"
            android:hint="@string/reason_for_leave"
            android:textColor="#000000"
            android:textColorHint="@color/black"
            tools:ignore="Autofill,InOrMmUsage,TextFields,TextContrastCheck" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="2in"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#263238"
            android:text="@string/submit"
            android:textColor="#FFFFFF"
            tools:ignore="InOrMmUsage" />

    </LinearLayout>
</LinearLayout>